test_scripts/errors/set_not_implemented.stderr
 1 | let s = { 1, 2, 3 }
             ^
 2 | print(s)
Error: set literals are not yet implemented
